revert testing changes

--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -19,8 +19,8 @@
 
     <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" /> -->
     <!-- <link rel="stylesheet" href="{% static 'landing/landing.css' %}" /> -->
-    <!-- <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" /> -->
-    <!-- <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script> -->
+    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
+    <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
 
 
 </head>
@@ -134,7 +134,326 @@
 
     </div>
 
+    <div class="portfolio" id="Portfolio">
+        <div class="portfoliotext">
+            <h2>
+                See What
+                <br />
+                <span class="highlight">VideoCrafter.io</span> Has Done
+            </h2>
+        </div>
 
+        <div class="grid">
+            <h2 class="subtitle">TikTok Ad Examples</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video>
+                </div>
+                <div class="grid-item">
+                    <video src="{% static 'videos/tiktok/tiktok2.mp4' %}" class="tiktok-video" controls></video>
+                </div>
+                <div class="grid-item">
+                    <video src="{% static 'videos/tiktok/tiktok3.mp4' %}" class="tiktok-video" controls></video>
+                </div>
+            </div>
+
+            <h2 class="subtitle">Facebook/Instagram Ad Examples</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <video src="{% static 'videos/facebook/facebook1.mp4' %}" class="facebook-video" controls></video>
+                </div>
+                <div class="grid-item">
+                    <video src="{% static 'videos/facebook/facebook2.mp4' %}" class="facebook-video" controls></video>
+                </div>
+                <div class="grid-item">
+                    <video src="{% static 'videos/facebook/facebook3.mp4' %}" class="facebook-video" controls></video>
+                </div>
+            </div>
+
+            <h2 class="subtitle">YouTube Ad Examples</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <video src="{% static 'videos/youtube/youtube1.mp4' %}" class="youtube-video" controls></video>
+                </div>
+                <div class="grid-item">
+                    <video src="{% static 'videos/youtube/youtube2.mp4' %}" class="youtube-video" controls></video>
+                </div>
+                <div class="grid-item">
+                    <video src="{% static 'videos/youtube/youtube3.mp4' %}" class="youtube-video" controls></video>
+                </div>
+            </div>
+        </div>
+
+        <!--
+      
+     
+
+      <div class="grid">
+        <div class="grid-container">
+          <div class="grid-item">
+            <img src="{% static 'assets/icons/Play.svg' %}"
+                 alt="play"
+                 class="img-size" />
+          </div>
+          <div class="grid-item">
+            <img src="{% static 'assets/icons/Play.svg' %}"
+                 alt="play"
+                 class="img-size" />
+          </div>
+          <div class="grid-item">
+            <img src="{% static 'assets/icons/Play.svg' %}"
+                 alt="play"
+                 class="img-size" />
+          </div>
+          <div class="grid-item">
+            <img src="{% static 'assets/icons/Play.svg' %}"
+                 alt="play"
+                 class="img-size" />
+          </div>
+          <div class="grid-item">
+            <img src="{% static 'assets/icons/Play.svg' %}"
+                 alt="play"
+                 class="img-size" />
+          </div>
+          <div class="grid-item">
+            <img src="{% static 'assets/icons/Play.svg' %}"
+                 alt="play"
+                 class="img-size" />
+          </div>
+        </div>
+      </div>
+ -->
+
+        <!--
+      <div class="mobi-slider">
+        <div class="slider">
+          <div class="slides">
+            <div class="slide">
+              <div class="Placeholder">
+                <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="Placeholder">
+                <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="Placeholder">
+                <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video>
+              </div>
+            </div>
+            
+          </div>
+
+          <div class="slider-dots">
+            <span class="dot active"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
+        </div>
+      </div>
+
+
+<div class="mobi-slider facebook-slider">
+  <h2 class="subtitle mobile-sub-head">Facebook Ad Examples</h2>
+  <div class="slider">
+    <div class="slides">
+      <div class="slide">
+        <div class="Placeholder-mob">
+          <video src="{% static 'videos/facebook/facebook1.mp4' %}" class="facebook-video" controls></video>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="Placeholder-mob">
+          <video src="{% static 'videos/facebook/facebook2.mp4' %}" class="facebook-video" controls></video>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="Placeholder-mob">
+          <video src="{% static 'videos/facebook/facebook3.mp4' %}" class="facebook-video" controls></video>
+        </div>
+      </div>
+     
+    </div>
+    <div class="slider-dots">
+      <span class="dot active"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+  </div>
+</div>
+
+
+<div class="mobi-slider youtube-slider">
+  <h2 class="subtitle mobile-sub-head">YouTube Ad Examples</h2>
+  <div class="slider">
+    <div class="slides">
+      <div class="slide">
+        <div class="Placeholder-mob">
+          <video src="{% static 'videos/youtube/youtube1.mp4' %}" class="youtube-video" controls></video>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="Placeholder-mob">
+          <video src="{% static 'videos/youtube/youtube2.mp4' %}" class="youtube-video" controls></video>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="Placeholder-mob">
+          <video src="{% static 'videos/youtube/youtube3.mp4' %}" class="youtube-video" controls></video>
+        </div>
+      </div>
+     
+    </div>
+    <div class="slider-dots">
+      <span class="dot active"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+  </div>
+</div>
+-->
+        <div class="mobi-slider tiktok-slider">
+            <h2 class="subtitle mobile-sub-head">TikTok Ad Examples</h2>
+            <div class="slider">
+                <div class="slides">
+                    <div class="slide">
+                        <div class="Placeholder-mob">
+
+                            <video id="tiktok-video-1"
+                                class="video-js vjs-default-skin vjs-big-play-centered tiktok-video" controls
+                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
+                                <source src="{% static 'videos/tiktok/tiktok1.mp4' %}" type="video/mp4" />
+                            </video>
+
+
+
+
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="Placeholder-mob">
+                            <video id="tiktok-video-2"
+                                class="video-js vjs-default-skin vjs-big-play-centered tiktok-video" controls
+                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
+                                <source src="{% static 'videos/tiktok/tiktok2.mp4' %}" type="video/mp4" />
+                            </video>
+
+
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="Placeholder-mob">
+                            <video id="tiktok-video-3"
+                                class="video-js vjs-default-skin vjs-big-play-centered tiktok-video" controls
+                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
+                                <source src="{% static 'videos/tiktok/tiktok3.mp4' %}" type="video/mp4" />
+                            </video>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-dots">
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="mobi-slider facebook-slider">
+            <h2 class="subtitle mobile-sub-head">Facebook Ad Examples</h2>
+            <div class="slider">
+                <div class="slides">
+                    <div class="slide">
+                        <div class="Placeholder-mob">
+
+                            <video id="facebook-video-1"
+                                class="video-js vjs-default-skin vjs-big-play-centered facebook-video" controls
+                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
+                                <source src="{% static 'videos/facebook/facebook1.mp4' %}" type="video/mp4" />
+                            </video>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="Placeholder-mob">
+
+                            <video id="facebook-video-2"
+                                class="video-js vjs-default-skin vjs-big-play-centered facebook-video" controls
+                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
+                                <source src="{% static 'videos/facebook/facebook2.mp4' %}" type="video/mp4" />
+                            </video>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="Placeholder-mob">
+
+                            <video id="facebook-video-3"
+                                class="video-js vjs-default-skin vjs-big-play-centered facebook-video" controls
+                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
+                                <source src="{% static 'videos/facebook/facebook3.mp4' %}" type="video/mp4" />
+                            </video>
+
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="slider-dots">
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="mobi-slider youtube-slider">
+            <h2 class="subtitle mobile-sub-head">YouTube Ad Examples</h2>
+            <div class="slider">
+                <div class="slides">
+                    <div class="slide">
+                        <div class="Placeholder-mob">
+                            <video id="youtube-video-1"
+                                class="video-js vjs-default-skin vjs-big-play-centered youtube-video" controls
+                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
+                                <source src="{% static 'videos/youtube/youtube1.mp4' %}" type="video/mp4" />
+                            </video>
+
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="Placeholder-mob">
+
+                            <video id="youtube-video-2"
+                                class="video-js vjs-default-skin vjs-big-play-centered youtube-video" controls
+                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
+                                <source src="{% static 'videos/youtube/youtube2.mp4' %}" type="video/mp4" />
+                            </video>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="Placeholder-mob">
+                            <video id="youtube-video-3"
+                                class="video-js vjs-default-skin vjs-big-play-centered youtube-video" controls
+                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
+                                <source src="{% static 'videos/youtube/youtube3.mp4' %}" type="video/mp4" />
+                            </video>
+                        </div>
+                    </div>
+                    <!-- Additional slides can be added here -->
+                </div>
+                <div class="slider-dots">
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
 
     <div class="howitworks" id="HowItWorks">
         <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="" />
@@ -470,8 +789,7 @@
         <div class="cta-main" style="background-color: white; z-index: 100;">
             <div class="cta-box">
                 <h1>Try VideoCrafter.io FREE<br>No Credit Card Required</h1>
-                <p style="margin: 0 auto;">Get hands-on with VideoCrafter.io and experience the speed and simplicity for
-                    yourself. Stop waiting.
+                <p style="margin: 0 auto;">Get hands-on with VideoCrafter.io and experience the speed and simplicity for yourself. Stop waiting.
                     Start creating.</p>
             </div>
             <button class="cta-button">Get VideoCrafter Now</button>
@@ -528,36 +846,33 @@
                 <div class="form-row">
                     <div class="form-group">
                         <label for="first-name">First name</label>
-                        <input type="text" id="first-name" name="first_name" placeholder="First name"
-                            autocomplete="given-name" required />
+                        <input type="text" id="first-name" name="first_name" placeholder="First name" autocomplete="given-name" required />
                     </div>
                     <div class="form-group">
                         <label for="last-name">Last name</label>
-                        <input type="text" id="last-name" name="last_name" placeholder="Last name"
-                            autocomplete="family-name" required />
+                        <input type="text" id="last-name" name="last_name" placeholder="Last name" autocomplete="family-name" required />
                     </div>
                 </div>
-
+            
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="you@company.com" autocomplete="email"
-                        required />
+                    <input type="email" id="email" name="email" placeholder="you@company.com" autocomplete="email" required />
                 </div>
-
+            
                 <div class="form-group">
                     <label for="message">Message</label>
                     <textarea id="message" name="message" placeholder="" required></textarea>
                 </div>
-
+            
                 <button type="submit">Send Message</button>
             </form>
-
+            
         </div>
     </div>
 
     {% include "vlc/frontend/includes/footer.html" %}
 
-    <!-- <script>
+    <script>
         videojs('youtube-video-1');
         videojs('youtube-video-2');
         videojs('youtube-video-3');
@@ -571,7 +886,7 @@
         videojs('tiktok-video-1');
         videojs('tiktok-video-2');
         videojs('tiktok-video-3');
-    </script> -->
+    </script>
 
 
     <script>
@@ -622,7 +937,7 @@
         });
     </script>
 
-    <!-- <script src="{% static 'landing/script.js' %}"></script> -->
+    <script src="{% static 'landing/script.js' %}"></script>
 </body>
 
 </html>
