--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -41,15 +41,19 @@
 
       <div class="top">
         <div class="typography">
-            <h1 class="h1hero">Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
-                Video Editor Required
-            </h1>
+          <h1 class="h1hero">
+            The Fastest and Easiest Way to Create <span class="highlight">High-
+            <br />
+            Converting</span> Video Ads
+          </h1>
 
-            <p class="phero">
-                Why leave your ad performance in someone else’s hands when you can do it yourself?<br>Introducing
-                VideoCrafter.io – the fastest, easiest way to create scroll-stopping video ads <br> for Facebook,
-                Instagram, YouTube, and TikTok – without needing a video editor.
-            </p>
+          <p class="phero">
+            Are You Tired Of Relying On Expensive And Unreliable Video Editors For Your Video Ads? Wish
+            <br />
+            There Was A Faster, Easier, And More Affordable Way To Create High-Quality Video Ads For
+            <br />
+            Your Facebook Ads, YouTube Ads, Ecommerce Products, Or Affiliate Offers?
+          </p>
         </div>
 
         <div class="heroButton">
