--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -34,7 +34,7 @@
 
         <div class="top">
             <div class="typography">
-                <h1 class="h1hero">Create<span class="highlight"> High-Converting Video Ads </span>Within An<br>Hour – No
+                <h1 class="h1hero">Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
                     Video Editor Required
                 </h1>
 
@@ -59,6 +59,73 @@
                 <img src="{% static 'assets/icons/Play.svg' %}" alt="play" />
             </div>
         </div>
+    </div>
+
+    <div class="portfolio" id="Portfolio">
+        <div class="portfoliotext mtg">
+            <h2 class="for-marg">
+                Why We Built
+                <br />
+                <span class="highlight">VideoCrafter.io</span>
+            </h2>
+            <p class="highlight-p for-margg">We Know How Frustrating It Can Be To Create High-Conversion Video Ads.</p>
+            <p class="highlight-p for-margin">Here's Why</p>
+        </div>
+        <div class="portfolio-grid">
+            <div class="portfolio-box">
+                <div class="portfolio-text">
+                    <div class="portfolio-head">
+                        <h1>1</h1>
+                        <div class="border"></div>
+                    </div>
+                    <div class="sub-text">
+                        <h1>delays are costly</h1>
+                        <p>
+                            Waiting On Video Editors Can Take Days (Sometimes Weeks) - Slowing Down Your Campaigns And
+                            Hurting Your Bottom Line.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <div class="portfolio-text">
+                    <div class="portfolio-head">
+                        <h1>2</h1>
+                        <div class="border"></div>
+                    </div>
+                    <div class="sub-text">
+                        <h1>Missed Deadlines Hurt</h1>
+                        <p>
+                            Editors often disappear mid-project, leaving you scrambling for solutions.
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <div class="portfolio-text">
+                    <div class="portfolio-head">
+                        <h1>3</h1>
+                        <div class="border"></div>
+                    </div>
+                    <div class="sub-text">
+                        <h1>Costs Add Up Fast</h1>
+                        <p>
+                            Hiring professionals for every ad is expensive – and revision fees only make it worse.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="portfolio-bottom-text">
+            <p>We were fed up relying on editors who couldn’t keep up, so we created VideoCrafter.io – a tool that puts
+                you in control.</p>
+        </div>
+
+
     </div>
 
     <div class="portfolio" id="Portfolio">
