--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -13,7 +13,8 @@
     {% include 'partials/head_c.html' %}
 
     <!-- <link rel="stylesheet" href=" /static/landing/style-tmp.css" /> -->
-    <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" />
+    <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" /> -->
+    <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}?v=1.0" />
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
 
@@ -61,7 +62,7 @@
         </div>
     </div>
 
-    <div class="portfolio" id="Portfolio">
+    <div class="portfolio">
         <div class="portfoliotext mtg">
             <h2 class="for-marg">
                 Why We Built
