--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -13,8 +13,8 @@
     {% include 'partials/head_c.html' %}
 
     <!-- <link rel="stylesheet" href=" /static/landing/style-tmp.css" /> -->
-    <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" /> -->
-    <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}?v=1.0" />
+    <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" />
+    <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}?v=1.0" /> -->
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
 
@@ -458,62 +458,88 @@
         <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="" />
 
         <div class="hiw-heading-text">
-            How does it <span class="highlight">work?</span><span>work?</span>
+            How <span class="highlight">VideoCrafter<span style="font-size: 16px;">.io</span> <span
+                    style="color: #000000;">works:</span> <span class="an-span">works:</span>
+                <div class="hiw-element-placeholder  for-mobile" style="margin-top: 48px; margin-bottom: 32px;"></div>
         </div>
 
         <div class="hiw-container">
             <div class="hiw-element hiw-column">
-                <div class="hiw-element-placeholder"></div>
                 <div class="hiw-element-text-container">
-                    <div class="hiw-element-heading">1. Build Your Asset Library</div>
-                    <div class="hiw-element-text">
-                        Upload and organize your video clips into folders (e.g., product shots, testimonials, problem
-                        scenarios).
+                    <div class="hiw-element-heading">1. pick video dimensions:</div>
+                    <div class="hiw-element-text hew">
+                        <i class="fa-solid fa-check"></i>
+                        <div class="adjust">
+                            <p>select the format that fits your platform:</p>
+                            <div class="dimensions-container">
+                                <div class="aspect-box">1:1</div>
+                                <div class="aspect-box" style="width: 75px;">4:5</div>
+                                <div class="aspect-box" style="width: 96px;">16:9</div>
+                                <div class="aspect-box tall" style="width: 66px; height: 96px;">9:16</div>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
+
+                <div class="hiw-element-placeholder"></div>
+
             </div>
             <div class="hiw-element hiw-flex hiw-column">
                 <div class="hiw-element-placeholder"></div>
                 <div class="hiw-element-text-container">
-                    <div class="hiw-element-heading">2. Upload Your Script</div>
-                    <div class="hiw-element-text">
-                        Our software will break your script down into slides like this
+                    <div class="hiw-element-heading">2. Add AI voiceover</div>
+                    <div class="hiw-element-text hew-t">
+                        <i class="fa-solid fa-check"></i>
+                        <p>Paste Your API Key And Voice ID, And Let Al Create Realistic, Human-Like
+                            Voiceovers - No Robotic Tones Here.</p>
                     </div>
                 </div>
             </div>
             <div class="hiw-element hiw-column">
-                <div class="hiw-element-placeholder"></div>
                 <div class="hiw-element-text-container">
-                    <div class="hiw-element-heading">3. Select Your AI Voice Over</div>
-                    <div class="hiw-element-text">
-                        You can chose any voice ID from eleven labs for your script
+                    <div class="hiw-element-heading">3. Upload Your Script:</div>
+                    <div class="hiw-element-text hew-t">
+                        <i class="fa-solid fa-check"></i>
+                        <p>Simply Upload Your Script, Then
+                            Highlight The Words You Want To Pair With Video Clips:</p>
                     </div>
                 </div>
+                <div class="hiw-element-placeholder"></div>
+
             </div>
             <div class="hiw-element hiw-flex hiw-column">
                 <div class="hiw-element-placeholder"></div>
                 <div class="hiw-element-text-container">
-                    <div class="hiw-element-heading">4. Match Video Clips</div>
-                    <div class="hiw-element-text">
-                        For each line of your script, either upload a new video clip or select one from your asset
-                        library.
+                    <div class="hiw-element-heading">4. Build Your Asset Library:</div>
+                    <div class="hiw-element-text hew-t">
+                        <i class="fa-solid fa-check"></i>
+                        <p>Organize Your Clips Into Folders (E.G.,
+                            "Product Demos" Or "Male Crying
+                            Clips") For Easy Reuse Across Multiple Projects. No More Searching Through Files.</p>
                     </div>
                 </div>
             </div>
             <div class="hiw-element hiw-column">
-                <div class="hiw-element-placeholder"></div>
                 <div class="hiw-element-text-container">
-                    <div class="hiw-element-heading">5. Choose Background Music</div>
-                    <div class="hiw-element-text">Specify when it should start.</div>
+                    <div class="hiw-element-heading">5. Match Clips To Script</div>
+                    <div class="hiw-element-text hew-t">
+                        <i class="fa-solid fa-check"></i>
+                        <p>5. Highlight The Text, Then Select A Clip From Your Asset Library Or Computer.
+                            VideoCrafter lo Takes Care Of Cropping, Syncing, And Aligning Everything Perfectly.</p>
+                    </div>
                 </div>
+                <div class="hiw-element-placeholder"></div>
+
             </div>
             <div class="hiw-element hiw-flex hiw-column">
                 <div class="hiw-element-placeholder"></div>
                 <div class="hiw-element-text-container">
-                    <div class="hiw-element-heading">6. Click "Create Video"</div>
-                    <div class="hiw-element-text">
-                        Get a fully produced video ad with your chosen AI voice-over, video clips, subtitles, and
-                        background music in minutes.
+                    <div class="hiw-element-heading">6. Add Background Music</div>
+                    <div class="hiw-element-text hew-t">
+                        <i class="fa-solid fa-check"></i>
+                        <p>Upload Your Favorite MP3 Tracks, Set Start/End Points, And Adjust The Volume To Bring Your
+                            Videos To Life.</p>
                     </div>
                 </div>
             </div>
