--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -546,6 +546,62 @@
         </div>
     </div>
 
+    <div class="portfolio main-eature-container" id="Portfolio">
+        <div class="portfoliotext">
+            <h2 class="marg">
+                Why <span class="highlight">VideoCrafter.io</span><span style="text-transform: capitalize;"> beats any
+                    video Editor</span>
+            </h2>
+        </div>
+        <div class="feature-container">
+            <div class="feature-card">
+                <div class="circle">1</div>
+                <div class="circle-border"></div>
+                <h3>Create Videos Fast</h3>
+                <p>Stop Wasting Time On Complex Tools And Endless Revisions. With VideoCrafter.io, You Can Create
+                    Professional, Eye-Catching Videos In Record Time.</p>
+            </div>
+            <div class="feature-card">
+                <div class="circle">2</div>
+                <div class="circle-border"></div>
+                <h3>No Missed Deadlines</h3>
+                <p>Tired Of Freelancers Vanishing When You Need Them Most? VideoCrafter.io Puts YOU In Control.</p>
+            </div>
+            <div class="feature-card">
+                <div class="circle">3</div>
+                <div class="circle-border"></div>
+                <h3>VA-Friendly</h3>
+                <p>Unlock The Full Potential Of Your Team By Equipping Them With VideoCrafter.io. Empower Your Virtual
+                    Assistants (VAs) To Handle Video Creation At A Fraction Of The Cost.</p>
+            </div>
+            <div class="feature-card">
+                <div class="circle">4</div>
+                <div class="circle-border"></div>
+                <h3>Control Your Ads</h3>
+                <p>Stop Wasting Time On Complex Tools And Endless Revisions. With VideoCrafter.io, You Can Create
+                    Professional, Eye-Catching Videos In Record Time.</p>
+            </div>
+        </div>
+        <div class="portfolio-bottom-text for-m ">
+            <p class="for-marg-c" style="margin-bottom: 40px;">We Were Fed Up Relying On Editors Who Couldn't Keep Up,
+                So We Created VideoCrafter.lo - A Tool That Puts
+                You In Control.</p>
+        </div>
+        <div class="portfolio-border"></div>
+    </div>
+
+    <div class="tutorial-container" style="height: auto;">
+        <h1 class="tutorial-title">
+            <span class="title-bold">VideoCrafter</span>
+            <span class="title-highlight">Tutorial</span>
+        </h1>
+        <p class="tutorial-description">
+            In This Tutorial, We'll Walk You Through How To Use VideoCrafter.Io To Create
+            High-Converting Video Sales Letters With Ease.
+        </p>
+        <div class="video-placeholder"></div>
+    </div>
+
     <div class="pricing" id="pricing">
         <div class="top">
             <p class="ptop-text">
